fix: z-index in modal OPPENED by FirstPost

--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -7,6 +7,7 @@
     right: 0;
     bottom: 0;
     background-color: #00000080;
+    z-index: 10;
 }
 .modal--container{
     display: grid;
